# validatornode

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  db_init.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sonar-project.properties  validator-node-config.env  validator-node-config.local.env  validator-node-config.yml  vision-validator-node-worker.sh  vision-validator-node.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_report.yml  issue_report.yaml
.github/workflows/: build.yml  ci.yml  docker-vulnerabilities.yaml  main.yaml  publish-docker.yaml  release.yaml  sonar.yaml
configurator/DEBIAN/: .gitignore  config  control.template  postinst  templates
debian/: .gitignore  changelog  control  postinst  postrm  preinst  prerm  rules  templates  vision-validator-node-celery.service  vision-validator-node-server.service  vision-validator-node.dirs  vision-validator-node.install  vision-validator-node.links  vision-validator-node.sysuser  vision-validator-node.triggers
linux/etc/default/: vision-validator-node
linux/scripts/: start-web.py  vision-validator-node-celery  vision-validator-node-server
tests/: conftest.py  test_application.py  test_celery.py  test_configuration.py  test_entities.py  test_monitor.py  test_protocol.py  test_restclient.py
tests/blockchains/: test_avalanche.py  test_base.py  test_bnbchain.py  test_celo.py  test_cronos.py  test_ethereum.py  test_factory.py  test_polygon.py  test_solana.py  test_sonic.py
tests/business/: conftest.py  test_get_error_class.py
tests/business/signatures/: conftest.py  test_add_secondary_node_signature.py
tests/business/transfers/: conftest.py  test_confirm_transfer.py  test_detect_new_transfers.py  test_get_validator_nonce.py  test_submit_transfer_onchain.py  test_submit_transfer_to_primary_node.py  test_validate_transfer.py
tests/database/: conftest.py
tests/database/postgres/: conftest.py
tests/database/sqlite/: conftest.py  test_init.py  test_models.py
tests/restapi/: conftest.py  test_transfer_signature.py  test_validator_nonce.py
vision/validatornode/: __init__.py  __main__.py  application.py  celery.py  configuration.py  entities.py  exceptions.py  monitor.py  protocol.py  restapi.py  restclient.py  wsgi.py
vision/validatornode/blockchains/: avalanche.py  base.py  bnbchain.py  celo.py  cronos.py  ethereum.py  factory.py  polygon.py  solana.py  sonic.py
vision/validatornode/business/: base.py  signatures.py  transfers.py
vision/validatornode/database/: __init__.py  access.py  exceptions.py  models.py
(+21 files in other folders)
