[tool.poetry]
name = "vision-validator-node"
version = "0.1.0"
description = "Vision Validator Node (reference implementation)"
authors = ["Vision XXX <XXX@XXX>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "vision"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vision"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"
web3 = {extras = ["tester"], version = "^6.5.0"}

[tool.poetry.group.lint.dependencies]
bandit = "1.8.3"
flake8 = "7.2.0"
isort = "6.0.1"
mypy = "1.0.1"
# mypy = "1.0.1"
types-pyyaml = "6.0.12.20241230"
types-requests = "2.32.0.20241016"
yapf = "0.43.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"

[tool.poetry.dependencies]
python = "^3.13"
vision-common = "0.1.0"
alembic = "1.15.2"
celery = "5.3.1"
Cerberus = "1.3.4"
Flask = "3.1.0"
Flask-Cors = "5.0.1"
Flask-RESTful = "0.3.10"
marshmallow = "3.26.1"
psycopg = {extras = ["binary", "pool"], version = "3.2.6"}
PyYAML = "6.0.1"
SQLAlchemy = "2.0.38"
web3 = "6.5.0"
JSON-log-formatter = "0.5.2"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"
semantic-version = "2.10.0"
requests = "2.32.3"
hexbytes = "1.2.1"
flower = "^2.0.1"
gunicorn = ">=22,<24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
